--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,11 @@
 /log/*
 !/log/.keep
 /tmp
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
+
+db/seeds.rb
+public/jsf
+public/sf
